add admin logout
